--- a/atracciones.html
+++ b/atracciones.html
@@ -2,6 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="author" content="BEATRIZ">
+    <meta name="viewport" content="width=device-width, 
+    initial-scale=1.0">
+    <meta name="keywords" content="Hotel,Acapulco,Punta diamante,Diamante,Residencial,Guerrero,Playa">
+    <meta name="description" content="El mejor hotel Diamante que se puede encontrar en la zona Punta Diamante Acapulco Guerrero">
   <title>Hotel Diamante</title>
   <link href="img/mapa.png" rel='shortcut icon' type='image/png'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +20,7 @@
   <header>
     <nav>
       <div class="nav-wrapper  indigo darken-4">
-        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#!" class="brand-logo"><img src="img/mapa.png" alt="">Hotel Diamante</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="index.html">INICIO</a></li>
@@ -74,7 +79,7 @@
           </ul>
         </div>
         <div class="card-action">
-          
+
         </div>
       </div>
     </div>
@@ -94,7 +99,7 @@
        </ul>
      </div>
      <div class="card-action">
-       
+
      </div>
    </div>
  </div>
@@ -106,6 +111,13 @@
 <footer class="page-footer  indigo darken-4">
   <div class="footer-copyright">
   </div>
+  <center>
+    <h3>Beatriz Flores Garcia</h3>
+    <a href="https://www.facebook.com/beatriz.flores.982292?epa=SEARCH_BOX">Facebook</a>
+    <a href="https://twitter.com/">Twitter</a>
+    <a href="https://www.instagram.com/">Instagram</a> 
+     </center>
+  <a href=""></a>
   
 </footer>
 </body>
